--- a/style.css
+++ b/style.css
@@ -5,17 +5,39 @@
 }
 
 .wrapper {
-    width: 500px;
+    width: 550px;
     background-color: lightblue;
     margin: 10px auto;
-    padding: 25px;
+    padding: 30px;
 }
 
-select {
+input {
     display: block;
+    padding: 10px;
     width: 100%;
-    height: 40px;
-    padding: 0 10px;
-    border-radius: 6px;
-    outline: none;
+    margin-bottom: 10px;
+}
+
+.message {
+    font-family: Verdana, sans-serif;
+    text-align: center;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.success {
+    background-color: #8af48a;
+    border: 1px solid #009900;
+    color: #009900;
+}
+
+.error {
+    background-color: #f48a8a;
+    border: 1px solid #990000;
+}
+
+.warning {
+    background-color: #f4ef8a;
+    border: 1px solid #996100;
 }
